--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start" : "node src/App.js",
+    "start": "node src/App.js",
     "dev": "nodemon src/App.js"
-    },
+  },
   "author": "Ankit Singh",
   "license": "ISC",
   "description": "Developer Tinder",
   "dependencies": {
-    "express": "^4.21.0"
+    "express": "^4.21.0",
+    "mongoose": "^8.7.0"
   }
 }
